feat: add unit tests with 100% mutation coverage via PIT